# lanhu-design-reader

./: .env.example  .gitignore  LICENSE  README.md  install.sh  pyproject.toml
cursor-skills/lanhu-design/: SKILL.md
examples/: cursor-mcp.http.json  cursor-mcp.stdio.json  read_slices.py
src/lanhu_design_reader/: __init__.py  cli.py  client.py  mcp_server.py
