[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanhu-design-reader"
version = "0.1.0"
description = "Standalone Lanhu design reader extracted from lanhu-mcp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
lanhu-design-reader = "lanhu_design_reader.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
