[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lanhu-design-reader"
version = "0.1.0"
description = "Standalone Lanhu design reader extracted from lanhu-mcp"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.2.0",
]

[project.scripts]
lanhu-design-reader = "lanhu_design_reader.cli:main"
lh-design = "lanhu_design_reader.cli:main"
lh-design-mcp = "lanhu_design_reader.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]
